// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> should render error image 1`] = `
<DocumentFragment>
  <img
    alt="Really Cool Image"
    crossorigin=""
    src="ERROR"
  />
</DocumentFragment>
`;

exports[`<Img /> should render placeholder image 1`] = `
<DocumentFragment>
  <img
    alt="Really Cool Image"
    crossorigin=""
    src="PLACEHOLDER"
  />
</DocumentFragment>
`;

exports[`<Img /> should render src image 1`] = `
<DocumentFragment>
  <img
    alt="Really Cool Image"
    crossorigin=""
    src="SUCCESS_SRC"
  />
</DocumentFragment>
`;
